# star-crew-64

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Makefile  N64_DEVELOPMENT_OPTIONS.md  README.md  build-run.bat  build-run.local.bat.example  build-run.sh  build.bat  clean.bat  edit-models.sh  gamedesign.md  install.bat  install.sh  tools.bat  tools.sh
.github/workflows/: deploy-pages.yml
assets/animations/: character_walk.anim.json  ship_idle.anim.json
assets/models/: bridge_panel.json  character.json  fighter.json  models.json  ship.json  weapons_panel.json
assets/textures/: textures.json
levels/: levels.json  starting.json  test_level.json
src/: audio.c  audio.h  bridge_panel.c  bridge_panel.h  bridge_panel_model.h  camera.c  camera.h  character.c  character.h  character_model.h  character_walk_anim.h  engineering_console.c  engineering_console.h  extinguisher.c  extinguisher.h  fighter_model.h  fire.c  fire.h  game_config.h  laser.c  laser.h  level.c  level.h  level_format.h  lighting.c  lighting.h  lobby.c  lobby.h  main.c  meshes.c  meshes.h  mission_select.c  mission_select.h  missions.c  missions.h  player.c  player.h  prompts.c  prompts.h  science_console.c  (+10 more)
tools/: ares-settings.bml  compile-levels.py  gen-bridge-panel-c.py  gen-bridge-panel.py  gen-character-anim.py  gen-character-c.py  gen-character.py  gen-fighter-c.py  gen-fighter.py  gen-ship-anim.py  gen-ship-c.py  gen-ship.py  gen-textures.py  gen-weapons-panel-c.py  gen-weapons-panel.py  index.html  install-ares-settings.bat  install-ares-settings.sh  save-ares-settings.sh
tools/level-editor/: index.html
tools/model-editor/: editor.js  index.html
web-overlay/: index.html  mobile-debug.js
